<resources>
    <string name="app_name">CookBOT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_export_csv">Export to CSV</string>
    <string name="action_import_csv">Import from CSV</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_io_t">IoTActivity</string>
    <string name="none_paired">No devices have been paired please paired </string>

    <string name="chicken_cook">Chicken</string>
    <string name="beef_cook">Beef</string>
    <string name="rice_cook">Potato FRI</string>
    <string name="noodles_cook">Noodles</string>
    <string name="fish_cook">Fish</string>
    <string name="potato_fry">Potato fry</string>
    <string name="read_data">Read Data</string>

    <string name="bot_on">CookerBOT ON</string>
    <string name="bot_off">CookerBOT Off</string>

    <!--<string name="waven_on">Woven OFF</string>-->
    <string name="waven_on">Send </string>
    <string name="waven_off">POTATO FRI</string>

    <!--new recipe-->
    <string name="oil">OIL</string>
    <string name="water">WATER</string>
    <string name="onion">ONION</string>
    <string name="chili">CHILI</string>
    <string name="salt">SALT</string>
    <string name="mixed_spice">MIXED SPICE</string>

    <string name="spud_grinding">SPUD GRINDING</string>
    <string name="timer">TIMER</string>
    <string name="other_1">CHICKEN/POTATO/OTHER 1 </string>
    <string name="other_2">CHICKEN/POTATO/OTHER 2 </string>
    <string name="oven_heat">OVEN HEAT</string>

    <string-array name="oven">
        <item>LOW</item>
        <item>MEDIUM</item>
        <item>HIGH</item>
    </string-array>

    <string-array name="recipe_type">
        <item>Automatic</item>
        <item>Manual</item>
    </string-array>
    <string name="title_activity_create_new">CreateNewActivity</string>
    <string name="title_activity_create_new_recipe">CreateNewRecipe</string>
    <string name="title_activity_recipe_list">RecipeList</string>
    <string name="title_activity_recipe">RecipeActivity</string>
    <string name="title_activity_gradients_map">GradientsMapActivity</string>
    <string name="title_activity_show_recipe">ShowRecipeActivity</string>
    <string name="title_activity_recipe_details">RecipeDetailsActivity</string>


    <string name="delete">Delete</string>


</resources>


